--- a/requirements.test.txt
+++ b/requirements.test.txt
@@ -1,4 +1,5 @@
 pytest==6.2.2
 pytest-cov==2.10.1
-simple-ruuvitag
 pytest-homeassistant-custom-component
+homeassistant==2022.10.5
+ruuvi_decoders==0.2.0
